# dfrt

./: .gitignore  README.md  README.workspace.md
docs/: current_scheme_summary_zh.md  de_lgi_diversity_frontier_review_zh.md  e_srt_hdsi_pd_final_scheme_zh.md  reference_cmdp_reproduction.md
experiments/: SUCCESSFUL_RUNS.md  build_neu_lora_native_datasets.py  find_structural_change_samples.py  run_dataset_specific_lora_yolo_formal.ps1  run_four_dataset_lora_native_formal.ps1  run_reference_cmdp_neu_smoke.ps1
generation/neu-det-pipeline/: pyproject.toml
generation/neu-det-pipeline/scripts/: run_yolov8n_mixed_validation.py  summarize_dbt_cmdp_run.py  visualize_de_lgi_run.py
generation/neu-det-pipeline/src/neu_det_pipeline/: __init__.py  cli.py  config.py
generation/neu-det-pipeline/src/neu_det_pipeline/data/: __init__.py  loader.py  resplit.py
generation/neu-det-pipeline/src/neu_det_pipeline/evaluation/: __init__.py
generation/neu-det-pipeline/src/neu_det_pipeline/guidance/: __init__.py  drft.py  extractor.py  mask.py  morphology.py
generation/neu-det-pipeline/src/neu_det_pipeline/models/: __init__.py  background_projector.py  context_lgi.py  context_sgda.py  drft_lora.py  generator.py  reference_cmdp.py
generation/neu-det-pipeline/src/neu_det_pipeline/prompts/: __init__.py  caption.py  keywords.py  templates.py
generation/neu-det-pipeline/tests/: test_drft_v2.py  test_e_srt_hdsi_pd_preset.py  test_hdsi_pd.py  test_hdsi_s2c.py  test_morphology.py  test_reference_cmdp.py  test_spec_srt.py
