[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neu-det-pipeline"
version = "0.1.0"
description = "NEU-DET data augmentation pipeline with DRFT-v2 residual-field generation and DRFT-LoRA fine-tuning"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["deep-learning", "data-augmentation", "defect-detection", "stable-diffusion", "lora", "yolo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "accelerate>=0.30.1",
  "controlnet-aux>=0.0.8",
  "diffusers>=0.30.0",
  "numpy>=1.24,<2.0",
  "omegaconf>=2.3",
  "opencv-python>=4.8",
  "pandas>=2.0",
  "pillow>=10.0",
  "rich>=13.7",
  "torchmetrics>=1.3",
  "safetensors>=0.4",
  "scikit-image>=0.22",
  "scikit-learn>=1.3",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "transformers>=4.37",
  "tqdm>=4.66",
  "typer>=0.9",
  "ultralytics>=8.0",  # Satisfied by the workspace's bundled editable Ultralytics fork.
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]

[project.scripts]
neu-det = "neu_det_pipeline.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/neu-det-pipeline"
Documentation = "https://github.com/yourusername/neu-det-pipeline#readme"
Repository = "https://github.com/yourusername/neu-det-pipeline"

# ============================
# Setuptools Configuration
# ============================
[tool.setuptools.packages.find]
where = ["src"]
include = ["neu_det_pipeline*"]

[tool.setuptools.package-data]
neu_det_pipeline = ["py.typed"]

# ============================
# Black (Code Formatter)
# ============================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# ============================
# Ruff (Linter)
# ============================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by black)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are fine

# ============================
# MyPy (Type Checker)
# ============================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

# ============================
# Pytest
# ============================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
